{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Player Control",
            "id": "d12abd9f-cc8a-4ff6-8ab9-55e943740b94",
            "actions": [
                {
                    "name": "DeltaPos",
                    "type": "Value",
                    "id": "6123be2d-ada1-49a6-97fa-e42838c94cc3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnPointerDown",
                    "type": "Button",
                    "id": "7c3a5119-7b5f-4769-86d0-2b725bda3bbd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnPointerUp",
                    "type": "Button",
                    "id": "32908825-f751-4133-bf13-e10146f088b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9af5cc9c-7766-490a-8639-ef480a7760c0",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeltaPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2ee3d73-b1b8-4646-b888-570d96b35603",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeltaPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af8d4d22-1823-429c-ad3d-542655f1ca47",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "OnPointerDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62ad3d09-aa04-4bf5-bf7f-93bb95775736",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "OnPointerDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d9201bb-1b34-4187-b0ce-806d898ee670",
                    "path": "<Mouse>/press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "OnPointerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d95edd28-18f9-4071-8c5d-d3ce73f30ee2",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "OnPointerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}